<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclobjc</name>
  <version>0.0.0</version>
  <description>Package containing the Objective C client.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rclobjc_common</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rosidl_generator_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_c</build_export_depend>

  <depend>rcl</depend>
  <depend>rmw_implementation</depend>

  <exec_depend>ament_cmake_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclobjc_common</test_depend>
  <test_depend>rmw</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
