<?xml version="1.0"?>
<package format="2">
  <name>rclobjc_common</name>
  <version>0.0.0</version>
  <description>Common code for ROS2 Objective-C projects.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
